--- a/lab1/task1/problem1.ipynb
+++ b/lab1/task1/problem1.ipynb
@@ -110,124 +110,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0 0\n",
-      "0.0 1\n",
-      "0.0 2\n",
-      "0.0 3\n",
-      "0.0 4\n",
-      "0.0 5\n",
-      "0.0 6\n",
-      "0.0 7\n",
-      "0.0 8\n",
-      "0.0 9\n",
-      "0.0 10\n",
-      "0.0 11\n",
-      "0.0 12\n",
-      "0.0 13\n",
-      "0.0 14\n",
-      "0.0 15\n",
-      "0.0 16\n",
-      "0.0 17\n",
-      "0.0 18\n",
-      "0.0 19\n",
-      "0.0 20\n",
-      "0.0 21\n",
-      "0.0 22\n",
-      "0.0 23\n",
-      "0.0 24\n",
-      "0.0 25\n",
-      "0.0 26\n",
-      "0.0 27\n",
-      "0.0 28\n",
-      "0.0 29\n",
-      "0.0 30\n",
-      "0.0 31\n",
-      "0.0 32\n",
-      "0.0 33\n",
-      "0.0 34\n",
-      "0.0 35\n",
-      "0.0 36\n",
-      "0.0 37\n",
-      "0.0 38\n",
-      "0.0 39\n",
-      "0.0 40\n",
-      "0.0 41\n",
-      "0.0 42\n",
-      "0.0 43\n",
-      "0.0 44\n",
-      "0.0 45\n",
-      "0.0 46\n",
-      "0.015625 47\n",
-      "0.0 48\n",
-      "0.0 49\n",
-      "0.0 50\n",
-      "0.0 51\n",
-      "0.015625 52\n",
-      "0.0 53\n",
-      "0.0 54\n",
-      "0.015625 55\n",
-      "0.0 56\n",
-      "0.015625 57\n",
-      "0.015625 58\n",
-      "0.015625 59\n",
-      "0.015625 60\n",
-      "0.03125 61\n",
-      "0.015625 62\n",
-      "0.03125 63\n",
-      "0.046875 64\n",
-      "0.046875 65\n",
-      "0.0625 66\n",
-      "0.0625 67\n",
-      "0.09375 68\n",
-      "0.09375 69\n",
-      "0.125 70\n",
-      "0.140625 71\n",
-      "0.171875 72\n",
-      "0.21875 73\n",
-      "0.25 74\n",
-      "0.296875 75\n",
-      "0.375 76\n",
-      "0.4375 77\n",
-      "0.515625 78\n",
-      "0.640625 79\n",
-      "0.765625 80\n",
-      "0.921875 81\n",
-      "1.109375 82\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Simon\\Documents\\Github\\algorithms_and_complexity\\lab1\\problem1.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Find runtime of about 1\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m100\u001b[39m):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mprint\u001b[39m(time_a(i), i)\n",
-      "\u001b[1;32mc:\\Users\\Simon\\Documents\\Github\\algorithms_and_complexity\\lab1\\problem1.ipynb Cell 9\u001b[0m in \u001b[0;36mtime_a\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtime_a\u001b[39m(n):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     start \u001b[39m=\u001b[39m process_time()\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     recursive_a(n)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     end \u001b[39m=\u001b[39m process_time()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m end \u001b[39m-\u001b[39m start\n",
-      "\u001b[1;32mc:\\Users\\Simon\\Documents\\Github\\algorithms_and_complexity\\lab1\\problem1.ipynb Cell 9\u001b[0m in \u001b[0;36mrecursive_a\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39melif\u001b[39;00m n \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39m0\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mmin\u001b[39m((n, \u001b[39m1\u001b[39m \u001b[39m+\u001b[39m recursive_a(n\u001b[39m-\u001b[39ma), \u001b[39m1\u001b[39m \u001b[39m+\u001b[39m recursive_a(n\u001b[39m-\u001b[39;49mb), \u001b[39m1\u001b[39m \u001b[39m+\u001b[39m recursive_a(n\u001b[39m-\u001b[39mc)))\n",
-      "\u001b[1;32mc:\\Users\\Simon\\Documents\\Github\\algorithms_and_complexity\\lab1\\problem1.ipynb Cell 9\u001b[0m in \u001b[0;36mrecursive_a\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39melif\u001b[39;00m n \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39m0\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mmin\u001b[39m((n, \u001b[39m1\u001b[39m \u001b[39m+\u001b[39m recursive_a(n\u001b[39m-\u001b[39ma), \u001b[39m1\u001b[39m \u001b[39m+\u001b[39m recursive_a(n\u001b[39m-\u001b[39mb), \u001b[39m1\u001b[39m \u001b[39m+\u001b[39m recursive_a(n\u001b[39m-\u001b[39;49mc)))\n",
-      "    \u001b[1;31m[... skipping similar frames: recursive_a at line 7 (11 times)]\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\Simon\\Documents\\Github\\algorithms_and_complexity\\lab1\\problem1.ipynb Cell 9\u001b[0m in \u001b[0;36mrecursive_a\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39melif\u001b[39;00m n \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39m0\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mmin\u001b[39m((n, \u001b[39m1\u001b[39m \u001b[39m+\u001b[39m recursive_a(n\u001b[39m-\u001b[39;49ma), \u001b[39m1\u001b[39m \u001b[39m+\u001b[39m recursive_a(n\u001b[39m-\u001b[39mb), \u001b[39m1\u001b[39m \u001b[39m+\u001b[39m recursive_a(n\u001b[39m-\u001b[39mc)))\n",
-      "\u001b[1;32mc:\\Users\\Simon\\Documents\\Github\\algorithms_and_complexity\\lab1\\problem1.ipynb Cell 9\u001b[0m in \u001b[0;36mrecursive_a\u001b[1;34m(n)\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrecursive_a\u001b[39m(n):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mif\u001b[39;00m n \u001b[39m<\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Simon/Documents/Github/algorithms_and_complexity/lab1/problem1.ipynb#X16sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m         \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39minf\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "# Find runtime of about 1\n",
-    "for i in range(100):\n",
-    "    print(time_a(i), i)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [],
@@ -575,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
