--- a/lab1/task1/problem1.ipynb
+++ b/lab1/task1/problem1.ipynb
@@ -29,6 +29,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 15\n",
+    "a = 5\n",
+    "b = 6\n",
+    "c = 7"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -40,11 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "def recursive_a(n):\n",
+    "    # O(3^n)\n",
     "    if n < 0:\n",
     "        return np.inf\n",
     "    elif n == 0:\n",
@@ -55,23 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
     }
    ],
    "source": [
     "# Call solution a\n",
-    "recursive_a(n)"
+    "print(recursive_a(n))"
    ]
   },
   {
