--- a/mastery1/problem1.ipynb
+++ b/mastery1/problem1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,49 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "def p2(n):\n",
-    "    dp = np.zeros(n)\n",
-    "    sum_c_365 = np.empty(n)\n",
-    "\n",
-    "    for i in range(n):\n",
-    "        sum_c_365[i] = sum(c[i:i+365])\n",
-    "    \n",
-    "    for i in range(n):\n",
-    "        dp[i] = min()\n",
-    "\n",
-    "    \n",
-    "    return sum_c_365\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([9., 7., 5., 2.])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p2(4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +57,7 @@
        "25"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,6 +65,106 @@
    "source": [
     "P(4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def smallest_total_cost():\n",
+    "    var_cost = [0] * n\n",
+    "    one_year_cost = [0] * n\n",
+    "    two_year_cost = [0] * n\n",
+    "    five_year_cost = [0] * n\n",
+    "    dp = [[0] * 4 for _ in range(n)]\n",
+    "\n",
+    "    var_cost[0] = p[0]\n",
+    "    one_year_cost[0] = q[0]\n",
+    "    two_year_cost[0] = r[0]\n",
+    "    five_year_cost[0] = s[0]\n",
+    "\n",
+    "    for i in range(1, n):\n",
+    "        var_cost[i] = min(p[i], var_cost[i-1] + c[i] * p[i])\n",
+    "        one_year_cost[i] = min(q[i] + dp[i-1][0], one_year_cost[max(0, i-365)] + q[max(0, i-365)] + sum(c[max(0, i-364):i+1]) * q[max(0, i-365)])\n",
+    "        two_year_cost[i] = min(r[i] + dp[i-1][1], two_year_cost[max(0, i-730)] + r[max(0, i-730)] + sum(c[max(0, i-729):i+1]) * r[max(0, i-730)])\n",
+    "        five_year_cost[i] = min(s[i] + dp[i-1][2], five_year_cost[max(0, i-1825)] + s[max(0, i-1825)] + sum(c[max(0, i-1824):i+1]) * s[max(0, i-1825)])\n",
+    "        dp[i][0] = min(var_cost[i], one_year_cost[i], two_year_cost[i], five_year_cost[i])\n",
+    "        dp[i][1] = min(one_year_cost[max(0, i-365)], two_year_cost[max(0, i-730)], five_year_cost[max(0, i-1825)])\n",
+    "        dp[i][2] = min(two_year_cost[max(0, i-730)], five_year_cost[max(0, i-1825)])\n",
+    "        dp[i][3] = five_year_cost[max(0, i-1825)]\n",
+    "\n",
+    "    return min(dp[n-1][0], dp[n-1][1], dp[n-1][2], dp[n-1][3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smallest_total_cost()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4, inf, inf], [14, inf, inf], [32, inf, inf], [40, inf, inf]]\n",
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "def optimal_plan(n, c, p, q, r, s):\n",
+    "    dp = [[float('inf'), float('inf'), float('inf')] for _ in range(n)]\n",
+    "    dp[0][0] = c[0] * p[0]\n",
+    "    one_year_cost = [q[i] + sum(c[:i+1]) * q[i] for i in range(n)]\n",
+    "    two_year_cost = [r[i] + sum(c[:i+1]) * r[i] for i in range(n)]\n",
+    "    five_year_cost = [s[i] + sum(c[:i+1]) * s[i] for i in range(n)]\n",
+    "    for i in range(1, n):\n",
+    "        dp[i][0] = min(dp[i-1][0] + c[i] * p[i], one_year_cost[i], two_year_cost[i], five_year_cost[i])\n",
+    "        if i >= 365:\n",
+    "            one_year_cost[i] = min(q[i] + dp[i-365][0], one_year_cost[i-365] + q[i] + sum(c[i-364:i+1]) * q[i])\n",
+    "        if i >= 730:\n",
+    "            two_year_cost[i] = min(r[i] + dp[i-730][1], two_year_cost[i-730] + r[i] + sum(c[i-729:i+1]) * r[i])\n",
+    "        if i >= 1825:\n",
+    "            five_year_cost[i] = min(s[i] + dp[i-1825][2], five_year_cost[i-1825] + s[i] + sum(c[i-1824:i+1]) * s[i])\n",
+    "\n",
+    "    return dp[-1][0]\n",
+    "\n",
+    "# Example usage:\n",
+    "n = 4\n",
+    "c = [2, 2, 3, 2]\n",
+    "p = [2, 5, 8, 10]\n",
+    "q = [4, 3, 4, 4]\n",
+    "r = [10, 9, 8, 7]\n",
+    "s = [10, 10, 10, 10]\n",
+    "print(optimal_plan(n, c, p, q, r, s)) # Output: 25\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
